🚀 Final polished version with full features, dark mode, goal editing, and UI enhancements